--- a/src/main/resources/templates/customlogin.html
+++ b/src/main/resources/templates/customlogin.html
@@ -17,6 +17,6 @@
             <input type="text" name="username" placeholder="Username" required="" autofocus=""/>
             <h2>Password</h2>
             <input type="password" name="password" placeholder="Password" required=""/>
-            <input type="submit" value="Log in"/>
+            <input id="loginbutton" type="submit" value="Log in"/>
       </form>
 </body></html>
