--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,11 +4,6 @@
     box-sizing: border-box;
 }
 
-.profilepicture {
-    width: 200px;
-    height: 200px;
-}
-
 .header {
     overflow: hidden;
     padding: 20px;
@@ -234,3 +229,82 @@
     padding: 0.3em;
     text-align: center;
 }
+
+.line {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 1px;
+    background-color: lightgrey;
+}
+
+.person {
+    display: flex;
+    flex-direction: row;
+}
+
+.personname {
+    font-weight: bold;
+    font-size: 20px;
+    margin: 10px;
+}
+
+.profilepicture img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.profilepicture {
+    margin-left: 2%;
+    margin-top: 10px;
+}
+
+.profilepictureform {
+    margin-left: 2%;
+    margin-top: 10px;
+}
+
+.skillform {
+    margin-left: 2%;
+    margin-top: 10px;
+}
+
+.profilebutton {
+    background-color: lightblue;
+    padding: 0.2em;
+    text-align: center;
+}
+
+.filebutton {
+    display: inline-block;
+    padding: 0.06em;
+    background-color: lightblue;
+    cursor: pointer;
+    border-style: outset;
+    border-bottom-color: black;
+    border-right-color: black;
+    border-top-color: grey;
+    border-left-color: grey;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.skilllikes {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+}
+
+.skilltext {
+    font-size: 20px;
+}
+
+.skills {
+    margin-left: 2%;
+}
+
